[gd_scene load_steps=51 format=2]

[ext_resource path="res://Characters/Maddow.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Maddow/0004.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Maddow/0005.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Maddow/0003.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Maddow/0007.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Maddow/0006.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Maddow/0008.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Maddow/0015.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Maddow/0014.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Maddow/0013.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Maddow/0002.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Maddow/0001.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Maddow/0011.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Maddow/0010.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Maddow/0009.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Maddow/0019.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Maddow/0020.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Maddow/0021.png" type="Texture" id=18]
[ext_resource path="res://Sounds/quick_swing.wav" type="AudioStream" id=19]
[ext_resource path="res://Sounds/long_swing.wav" type="AudioStream" id=20]
[ext_resource path="res://Sounds/long_taunt.wav" type="AudioStream" id=21]
[ext_resource path="res://Sounds/quick_taunt.wav" type="AudioStream" id=22]
[ext_resource path="res://Sounds/hit.wav" type="AudioStream" id=23]
[ext_resource path="res://Sounds/hit_end.wav" type="AudioStream" id=24]
[ext_resource path="res://Sprites/Maddow/0023.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Maddow/0025.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Maddow/0026.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Maddow/0027.png" type="Texture" id=32]
[ext_resource path="res://Sprites/Maddow/0028.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Maddow/0044.png" type="Texture" id=34]
[ext_resource path="res://Sprites/Maddow/0043.png" type="Texture" id=35]
[ext_resource path="res://Sprites/Maddow/0045.png" type="Texture" id=36]
[ext_resource path="res://Sprites/Maddow/0046.png" type="Texture" id=37]
[ext_resource path="res://Sprites/Maddow/0047.png" type="Texture" id=38]
[ext_resource path="res://Sounds/close_001.ogg" type="AudioStream" id=40]
[ext_resource path="res://Sprites/Maddow/0029.png" type="Texture" id=41]
[ext_resource path="res://Sprites/Maddow/0030.png" type="Texture" id=42]
[ext_resource path="res://Sprites/Maddow/0031.png" type="Texture" id=43]
[ext_resource path="res://Sprites/Maddow/0032.png" type="Texture" id=44]
[ext_resource path="res://Sprites/Maddow/0033.png" type="Texture" id=45]
[ext_resource path="res://Sprites/Maddow/0034.png" type="Texture" id=46]
[ext_resource path="res://Sprites/Maddow/0035.png" type="Texture" id=47]
[ext_resource path="res://Sprites/Maddow/0036.png" type="Texture" id=48]
[ext_resource path="res://Sprites/Maddow/0037.png" type="Texture" id=49]
[ext_resource path="res://Sprites/Maddow/0038.png" type="Texture" id=50]
[ext_resource path="res://Sprites/Maddow/0039.png" type="Texture" id=51]
[ext_resource path="res://Sprites/Maddow/0040.png" type="Texture" id=52]
[ext_resource path="res://Sprites/Maddow/0041.png" type="Texture" id=53]
[ext_resource path="res://Sprites/Maddow/0042.png" type="Texture" id=54]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ) ],
"loop": true,
"name": "Stun",
"speed": 5.0
}, {
"frames": [ ExtResource( 35 ), ExtResource( 34 ), ExtResource( 36 ) ],
"loop": true,
"name": "Knockdown",
"speed": 12.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 9 ), ExtResource( 8 ) ],
"loop": false,
"name": "Block High",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 13 ) ],
"loop": false,
"name": "Punch",
"speed": 5.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 33 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ) ],
"loop": true,
"name": "Power Punch",
"speed": 12.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 31 ), ExtResource( 30 ) ],
"loop": false,
"name": "Hit High",
"speed": 1.0
}, {
"frames": [ ExtResource( 37 ), ExtResource( 38 ) ],
"loop": true,
"name": "Get Up",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "Hit Low",
"speed": 5.0
}, {
"frames": [ ExtResource( 29 ) ],
"loop": true,
"name": "Block Low",
"speed": 5.0
} ]

[node name="Maddow" type="Node2D"]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.45, 0.45 )
frames = SubResource( 1 )
animation = "Idle"
script = ExtResource( 1 )

[node name="Block" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 40 )
volume_db = -3.979
pitch_scale = 1.17

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
pitch_scale = 1.25

[node name="QuickSwing" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 19 )
pitch_scale = 1.5

[node name="LongSwing" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 20 )
pitch_scale = 1.25
attenuation = 0.353553

[node name="LongTaunt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 21 )

[node name="QuickTaunt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 22 )
attenuation = 0.353553

[node name="HitEnd" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 24 )
pitch_scale = 1.25
